# Personal-Infomatics-Software-Backend

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  Rocket_docker.toml  data.md  sqlx-data.json  test.py
Example client/src/: Main.java
migrations/: 20230223151955_create_meals.up.sql  20230227134615_create_tables.down.sql  20230227134615_create_tables.up.sql
migrations/2023-02-21-145811_create_meals/: up.sql
src/: exercise.rs  lib.rs  main.rs  meal.rs  schema.rs  sleep.rs  users.rs  weight.rs
