[package]
name = "personal_infomatics_software_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
chrono = "0.4.23"
diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
