[package]
name = "personal_infomatics_software_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_mysql"] }
sqlx = { version = "0.6", features = ["macros", "chrono", "mysql", "offline"] }
chrono = {version = "*", features = ["serde"]}
